# freeserf

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  HACKING  HACKING.md  Makefile.am  README  README.md  TODO  WILL_RESUME_WORK_ON_FORKSERF_IN_WINTER  appveyor.yml  bootstrap  config.h.cmake  configure.ac  definitions.h.cmake  gfx.c  gfx.h  lng_de.xml  missions.xml
.github/workflows/: linux.yml  macos.yml  windows.yml
CMakeModules/: CreateSymlink.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  RunTests.cmake  VcsVersion.cmake
cmake/: CppLint.cmake  CreateAppleIcon.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindXMP.cmake  GitTools.cmake  GoogleTest.cmake  Info.plist.in  config.h.in  vcpkg.json
contrib/amiga/: amiga_decode.py  amiga_unpack.py
custom_graphics/: meta.ini
custom_graphics/frame_bottom/: meta.ini
custom_graphics/icon/: meta.ini
custom_graphics/map_ground/: meta.ini
custom_graphics/map_object/: add_1px_black_border.sh  convert_blue_to_purple.sh  convert_to_darker.sh  meta.ini  winter_tree6_frame3.xcf
custom_graphics/map_shadow/: convert_image_to_shadow.sh  create_shadow_no_skew.sh  meta.ini
custom_graphics/map_waves/: meta.ini
custom_graphics/panel_button/: meta.ini
mac/: deploy.sh
src/: CMakeCache.txt  CMakeLists.txt  ai.cc  ai.h  ai_pathfinder.cc  ai_pathfinder.h  ai_roadbuilder.cc  ai_roadbuilder.h  ai_util.cc  audio-dummy.c  audio-dummy.cc  audio-dummy.h  audio-sdlmixer.c  audio-sdlmixer.cc  audio-sdlmixer.h  audio.c  audio.cc  audio.h  buffer.cc  buffer.h  building.c  building.cc  building.h  characters.cc  characters.h  command_line.cc  command_line.h  config.c  config.h  configfile.cc  configfile.h  convertor.h  data-source-amiga.cc  data-source-amiga.h  data-source-custom.cc  data-source-custom.h  data-source-dos.c  data-source-dos.cc  data-source-dos.h  data-source-legacy.cc  (+137 more)
tests/: CMakeLists.txt  test_map.cc  test_map_geometry.cc  test_save_game.cc
tests/data/: map-memdump-1
vc10/: c2cpp.bat  cpp2c.bat  freeserf.sln  freeserf.vcxproj  freeserf.vcxproj.filters  readme.txt
windows/: config.h  freeserf.sln  freeserf.vcproj  freeserf.vcxproj  freeserf.vcxproj.filters  version-vcs.h
